# share-libs

./: .gitignore  README.md  bootstrap-all.sh  bootstrap-skills.sh  install-share-libs.sh
agents/skills/confluence/: SKILL.md
agents/skills/confluence/references/: commands.md
agents/skills/grafana-report-fetching/: SKILL.md
agents/skills/grafana-report-fetching/agents/: openai.yaml
agents/skills/grafana-report-fetching/references/: commands.md
agents/skills/iva-jira-ticket-sync/: SKILL.md
agents/skills/iva-jira-ticket-sync/agents/: openai.yaml
agents/skills/iva-jira-ticket-sync/references/: do-incident-template.md  iva-defaults.md
agents/skills/iva-logtracer/: SKILL.md
agents/skills/iva-logtracer/assets/: eval-dataset.jsonl  session-summary-template.md
agents/skills/iva-logtracer/references/: commands.md  debugging-playbooks.md  eval-iteration-loop.md  evaluation-cases.md  id-correlation.md  iva-project-query-scenarios.md  output-files.md  report-contract.md  routing-matrix.md
agents/skills/iva-logtracer/scripts/: diagnostic_report.py  kb_tool_audit.py  toolcall_audit.py  validate_eval_dataset.py
agents/skills/jira-ticket-sync/: SKILL.md
agents/skills/jira-ticket-sync/references/: ai-field-classification.md  commands.md  common-scenarios.md  do-incident-template.md  schema.md
agents/skills/kafka/: SKILL.md
agents/skills/kafka/references/: environment-profiles.yaml
agents/skills/kafka/scripts/: resolve_profile.py
agents/skills/kibana/: SKILL.md
agents/skills/kibana/references/: commands.md
apps/iva_logtracer/: README.md  check_indices.py  config.yaml  debug_search.py  find_last_sessions.py  info.md  manifest.json  pyproject.toml  run_span_analysis.py  test_air_search.py
apps/iva_logtracer/backend/src/: main.py
apps/iva_logtracer/docs/: log-correlation.md  use_cases.md  voice-call-logs-analysis.md
apps/iva_logtracer/frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/iva_logtracer/frontend/src/: App.tsx  index.css  main.tsx
apps/iva_logtracer/logtracer_extractors/: cli.py
apps/iva_logtracer/runners/: env_loader.sh  find_priority_accounts.py  run_discover.sh  run_find_priority_accounts.sh  run_trace.sh  run_turn.sh
apps/iva_logtracer/scripts/: query_account_assistant_transfer.py  query_account_time_window.py  transfer_audit.py  window_latency_stats.py
apps/iva_logtracer/tests/: test_diagnostic_report.py  test_discover_command.py  test_kibana_client_paging.py  test_toolcall_audit.py
docs/superpowers/plans/: 2026-04-12-iva-logtracer-component-explainability.md
docs/superpowers/specs/: 2026-04-12-iva-logtracer-component-index-correlation-design.md
tools/python/libs/common/: pyproject.toml
tools/python/libs/common/cptools_common/: __init__.py  config.py  logger.py
tools/python/libs/confluence/: pyproject.toml
tools/python/libs/confluence/cptools_confluence/: __init__.py  client.py  config.py  env.py
tools/python/libs/confluence/tests/: test_env_defaults.py
tools/python/libs/grafana/: pyproject.toml
tools/python/libs/grafana/cptools_grafana/: __init__.py  cli.py  client.py
tools/python/libs/jira/: pyproject.toml
tools/python/libs/jira/cptools_jira/: __init__.py  client.py
tools/python/libs/kibana/: README.md  install.sh  pyproject.toml
tools/python/libs/kibana/cptools_kibana/: __init__.py  cli.py  client.py  query.py  runtime.py  searcher.py
tools/python/libs/kibana/tests/: test_cli.py  test_runtime.py
tools/python/libs/translation/: pyproject.toml
tools/python/libs/translation/cptools_translation/: __init__.py  html_parser.py  translator.py
tools/python/libs/translation/cptools_translation/backends/: __init__.py  base.py  openai.py  tencent.py
tools/web/libs/timeline/: pyproject.toml  setup.py  test_enhanced.html
tools/web/libs/timeline/cptools_web/: __init__.py  timeline.py  tree_timeline.py
tools/web/libs/timeline/cptools_web/resources/css/: timeline-renderer.css  tree-timeline-renderer.css
tools/web/libs/timeline/cptools_web/resources/js/: timeline-renderer.js  tree-timeline-renderer.js
tools/web/libs/timeline/cptools_web/resources/templates/: tree-timeline-template.j2
tools/web/libs/timeline/examples/frontend/: example_trace.html  login_trace_demo.html  timeline-renderer.html  tree-timeline-example.html
tools/web/libs/timeline/examples/python/: basic_usage.py  jinja2_demo_simple.py  jinja2_integration.py
tools/web/libs/timeline/tests/: test_package.py
(+53 files in other folders)
