[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cptools-grafana"
version = "0.1.0"
description = "Grafana client for cp-tools"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
grafana-query = "cptools_grafana.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cptools_grafana*"]

