[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cptools-translation"
version = "0.1.0"
description = "Translation backends and HTML-aware translation for cp-tools"
requires-python = ">=3.10"
dependencies = [
    "cptools-common",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cptools_translation*"]

