[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cptools-web-libs-timeline"
version = "0.1.0"
description = "Web timeline visualization components for cp-tools"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
packages = ["cptools_web"]

[tool.setuptools.package-data]
cptools_web = [
    "resources/js/*.js",
    "resources/css/*.css",
    "resources/templates/*.j2",
]
